--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -8,6 +8,7 @@
   "fri": "T6",
   "sat": "T7",
   "no_entry": "Chưa có ghi chép cho ngày này",
+  "felt": "Tôi cảm thấy",
   "very_happy": "Rất vui",
   "happy": "Vui",
   "neutral": "Bình thường",
@@ -19,13 +20,14 @@
   "home": "Trang chủ",
   "journal": "Nhật ký",
   "profile": "Hồ sơ",
-  "greeting": "Xin chào!",
+  "greeting": "Xin chào! Hôm nay bạn cảm thấy thế nào?",
   "how_are_you_today": "Hôm nay bạn cảm thấy thế nào?",
   "note_placeholder": "Ghi chú thêm về cảm xúc của bạn... (không bắt buộc)",
-  "save": "Lưu lại",
+  "save": "Lưu lại cảm xúc",
   "your_day": "Hôm nay của bạn",
   "suggestion_for_you": "Gợi ý cho bạn",
   "monthly_overview": "Tổng quan tháng",
   "days_recorded": "ngày đã ghi chép",
-  "most_common_emotion": "Cảm xúc phổ biến"
+  "most_common_emotion": "Cảm xúc phổ biến",
+  "developed_by": "Phát triển bởi: GiniD"
 }
