--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -29,5 +29,6 @@
   "monthly_overview": "Tổng quan tháng",
   "days_recorded": "ngày đã ghi chép",
   "most_common_emotion": "Cảm xúc phổ biến",
-  "developed_by": "Phát triển bởi: GiniD"
+  "developed_by": "© 2025 - Phát triển bởi: GiniD",
+  "monthly_summary": "Tổng kết tháng"
 }
