--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -29,6 +29,6 @@
   "monthly_overview": "Monthly Overview",
   "days_recorded": "days recorded",
   "most_common_emotion": "Most Common Emotion",
-  "developed_by": "© 2025 - Developed by: GiniD",
+  "developed_by": "© 2025 - Developed by GiniD",
   "monthly_summary": "Monthly Summary"
 }
