--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -30,5 +30,6 @@
   "days_recorded": "days recorded",
   "most_common_emotion": "Most Common Emotion",
   "developed_by": "© 2025 - Developed by GiniD",
-  "monthly_summary": "Monthly Summary"
+  "monthly_summary": "Monthly Summary",
+  "note_details": "Note Details"
 }
