--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -30,5 +30,6 @@
   "days_recorded": "ngày đã ghi chép",
   "most_common_emotion": "Cảm xúc phổ biến",
   "developed_by": "© 2025 - Phát triển bởi GiniD",
-  "monthly_summary": "Tổng kết tháng"
+  "monthly_summary": "Tổng kết tháng",
+  "note_details" : "Chi tiết ghi chú"
 }
