--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -36,5 +36,7 @@
   "username": "Username",
   "submit": "Submit",
   "clear_data_confirmation": "Are you sure you want to clear all your mood entries? This action cannot be undone.",
-  "logout_confirmation": "Are you sure you want to log out?"
+  "logout_confirmation": "Are you sure you want to log out?",
+  "logout": "Log Out",
+  "cancel": "Cancel"
 }
