add feature insight + change UI header

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -39,5 +39,6 @@
   "logout_confirmation": "Are you sure you want to log out?",
   "logout": "Log Out",
   "cancel": "Cancel",
-  "close": "Close"
+  "close": "Close",
+  "insights": "Insights"
 }
