--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -39,6 +39,7 @@
   "logout_confirmation": "Bạn có chắc chắn muốn đăng xuất không?",
   "logout": "Đăng xuất",
   "cancel": "Hủy",
-  "close": "Đóng"
+  "close": "Đóng",
+  "insights": "Thống kê"
 
 }
