--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -8,10 +8,13 @@
   "fri": "Fri",
   "sat": "Sat",
   "no_entry": "No entry for this day",
+  "let_me_know_your_name": "Let me know your name",
   "felt": "I feel",
   "very_happy": "Very Happy",
   "happy": "Happy",
   "neutral": "Neutral",
+  "satisfied": "Satisfied",
+  "love": "Love",
   "sad": "Sad",
   "very_sad": "Very Sad",
   "amazing": "Amazing",
