--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -1,5 +1,5 @@
 {
-  "daily_quote": "Trích dẫn hàng ngày",
+  "daily_quote": "Trích dẫn mỗi ngày",
   "sun": "CN",
   "mon": "T2",
   "tue": "T3",
@@ -9,13 +9,16 @@
   "sat": "T7",
   "no_entry": "Chưa có ghi chép cho ngày này",
   "felt": "Tôi cảm thấy",
+  "let_me_know_your_name": "Hãy cho mình biết tên của bạn",
   "very_happy": "Rất vui",
-  "happy": "Vui",
+  "happy": "Vui vẻ",
+  "love": "Yêu thương",
+  "amazing": "Tuyệt vời",
   "neutral": "Bình thường",
   "sad": "Buồn",
   "very_sad": "Rất buồn",
-  "amazing": "Tuyệt vời",
   "worried": "Lo lắng",
+  "satisfied" : "Hài lòng",
   "angry": "Tức giận",
   "tired": "Mệt mỏi",
   "mindly_user": "Người dùng Mindly",
