Thêm function Ghi Chú

--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -9,12 +9,14 @@
   "sat": "T7",
   "day": "ngày",
   "no_entry": "Chưa có ghi chép cho ngày này",
+  "notes" : "Ghi chú",
   "felt": "Tôi cảm thấy",
   "let_me_know_your_name": "Hãy cho mình biết tên của bạn",
   "very_happy": "Rất vui",
   "happy": "Vui vẻ",
   "love": "Yêu thương",
   "amazing": "Tuyệt vời",
+  "rite_note_placeholder": "Viết ghi chú của bạn ở đây...",
   "neutral": "Bình thường",
   "sad": "Buồn",
   "very_sad": "Rất buồn",
