--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -11,10 +11,12 @@
   "no_entry": "No entry for this day",
   "let_me_know_your_name": "Let me know your name",
   "felt": "I feel",
+  "notes" : "Notes",
   "very_happy": "Very Happy",
   "happy": "Happy",
   "neutral": "Neutral",
   "satisfied": "Satisfied",
+  "rite_note_placeholder": "Write your notes here...",
   "love": "Love",
   "sad": "Sad",
   "very_sad": "Very Sad",
