Add function - add notes and authentication

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -16,7 +16,7 @@
   "happy": "Happy",
   "neutral": "Neutral",
   "satisfied": "Satisfied",
-  "rite_note_placeholder": "Write your notes here...",
+  "write_note_placeholder": "Write your notes here...",
   "love": "Love",
   "sad": "Sad",
   "very_sad": "Very Sad",
@@ -34,7 +34,10 @@
   "how_are_you_today": "How are you feeling today?",
   "note_placeholder": "Add a note about your feelings... (optional)",
   "save": "Save mood",
+  "pass_confirmation": "Password not correct",
+  "saveing": "Save",
   "your_day": "Your Day",
+  "ok": "OK",
   "suggestion_for_you": "Suggestion for you",
   "monthly_overview": "Monthly Overview",
   "days_recorded": "days recorded",
@@ -46,7 +49,7 @@
   "username": "Username",
   "submit": "Submit",
   "clear_data_confirmation": "Are you sure you want to clear all your mood entries? This action cannot be undone.",
-  "logout_confirmation": "Are you sure you want to log out?",
+  "logout_confirmation": "Are you sure you want to log out? (Data might be lost if not saved)",
   "logout": "Log Out",
   "cancel": "Cancel",
   "close": "Close",
