--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -10,13 +10,16 @@
   "day": "ngày",
   "no_entry": "Chưa có ghi chép cho ngày này",
   "notes" : "Ghi chú",
+  "saveing": "Lưu lại",
   "felt": "Tôi cảm thấy",
   "let_me_know_your_name": "Hãy cho mình biết tên của bạn",
   "very_happy": "Rất vui",
   "happy": "Vui vẻ",
   "love": "Yêu thương",
+  "pass_confirmation": "Mật khẩu không đúng",
+  "ok": "OK",
   "amazing": "Tuyệt vời",
-  "rite_note_placeholder": "Viết ghi chú của bạn ở đây...",
+  "write_note_placeholder": "Viết ghi chú của bạn ở đây...",
   "neutral": "Bình thường",
   "sad": "Buồn",
   "very_sad": "Rất buồn",
@@ -46,7 +49,7 @@
   "username": "Tên người dùng",
   "submit": "Gửi",
   "clear_data_confirmation": "Bạn có chắc chắn muốn xóa tất cả các mục tâm trạng của mình không? Hành động này không thể được hoàn tác.",
-  "logout_confirmation": "Bạn có chắc chắn muốn đăng xuất không?",
+  "logout_confirmation": "Bạn có chắc chắn muốn đăng xuất không? (Dữ liệu có thể bị mất nếu không được lưu)",
   "logout": "Đăng xuất",
   "cancel": "Hủy",
   "close": "Đóng",
