--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -9,7 +9,7 @@
   "sat": "Sat",
   "day": "day(s)",
   "no_entry": "No entry for this day",
-  "let_me_know_your_name": "Let me know your name",
+  "let_me_know_your_name": "Please note your password!!",
   "felt": "I feel",
   "notes" : "Notes",
   "very_happy": "Very Happy",
@@ -35,6 +35,7 @@
   "note_placeholder": "Add a note about your feelings... (optional)",
   "save": "Save mood",
   "pass_confirmation": "Password not correct",
+  "login_error": "Login Error",
   "saveing": "Save",
   "your_day": "Your Day",
   "ok": "OK",
