--- a/client/src/locales/vi.json
+++ b/client/src/locales/vi.json
@@ -12,11 +12,12 @@
   "notes" : "Ghi chú",
   "saveing": "Lưu lại",
   "felt": "Tôi cảm thấy",
-  "let_me_know_your_name": "Hãy cho mình biết tên của bạn",
+  "let_me_know_your_name": "Vui lòng ghi nhớ mật khẩu của bạn!!",
   "very_happy": "Rất vui",
   "happy": "Vui vẻ",
   "love": "Yêu thương",
   "pass_confirmation": "Mật khẩu không đúng",
+  "login_error": "Lỗi đăng nhập",
   "ok": "OK",
   "amazing": "Tuyệt vời",
   "write_note_placeholder": "Viết ghi chú của bạn ở đây...",
