--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,7 +9,7 @@
   "sat": "Sat",
   "day": "day(s)",
   "no_entry": "No entry for this day",
-  "let_me_know_your_name": "Let me know your name",
+  "let_me_know_your_name": "Take note of your passcode !!",
   "felt": "I feel",
   "notes" : "Notes",
   "very_happy": "Very Happy",
