--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -12,7 +12,7 @@
   "notes" : "Ghi chú",
   "saveing": "Lưu lại",
   "felt": "Tôi cảm thấy",
-  "let_me_know_your_name": "Hãy cho mình biết tên của bạn",
+  "let_me_know_your_name": "Hãy ghi nhớ mã khóa của bạn !!",
   "very_happy": "Rất vui",
   "happy": "Vui vẻ",
   "love": "Yêu thương",
