--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,7 +42,7 @@
   "monthly_overview": "Monthly Overview",
   "days_recorded": "days recorded",
   "most_common_emotion": "Most Common Emotion",
-  "developed_by": "© 2025 - Developed by GiniD",
+  "developed_by": "© 2026 - Developed by GiniD",
   "monthly_summary": "Monthly Summary",
   "note_details": "Note Details",
   "profile_public_warning": "This information will be displayed publicly so be careful what you share.",
@@ -64,6 +64,8 @@
   "weekly_summary": "Weekly Summary",
   "weekly_trend": "How have your emotions changed this week?",
   "no_data_for_week": "No data for this week",
+  "start_journalling": "Hãy bắt đầu ghi lại cảm xúc mỗi ngày nhé!",
+  "no_data_for_stats": "Chưa có đủ dữ liệu để hiển thị thống kê.",
   "add_entries_for_summary": "Add some entries to see your weekly summary.",
   "positive_week_trend": "You've had a great week! Keep up the positive vibes. ✨",
   "negative_week_trend": "It seems like you've had a tough week. Remember to be kind to yourself. Things will get better. ❤️",
