--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -42,7 +42,7 @@
   "monthly_overview": "Tổng quan tháng",
   "days_recorded": "ngày đã ghi chép",
   "most_common_emotion": "Cảm xúc phổ biến",
-  "developed_by": "© 2025 - Phát triển bởi GiniD",
+  "developed_by": "© 2026 - Phát triển bởi GiniD",
   "monthly_summary": "Tổng kết tháng",
   "note_details" : "Chi tiết ghi chú",
   "profile_public_warning": "Thông tin này sẽ được hiển thị công khai vì vậy hãy cẩn thận với những gì bạn chia sẻ.",
@@ -54,6 +54,8 @@
   "cancel": "Hủy",
   "close": "Đóng",
   "insights": "Thống kê",
+  "start_journalling": "Hãy bắt đầu ghi lại cảm xúc mỗi ngày nhé!",
+  "no_data_for_stats": "Chưa có đủ dữ liệu để hiển thị thống kê.",
   "emotion_stats": "Thống kê cảm xúc",
   "trending_analysis": "Xu hướng chung",
   "positive_trend" : "Bạn đang có xu hướng tích cực! Hãy tiếp tục phát huy 🌟",
